kube-files/service.yaml
apiVersion: v1
kind: Service
  ## default type is clusterIP, since we use ingress, clusterIP is enough
metadata:
  name: node-app-service
  namespace: node-app
spec:
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
