kube-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-nodeapp
  namespace: node-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nodeapp.alraedah.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-app-service
            port:
              number: 80
